<resources>
    <string name="app_name">Practica02</string>
    <string name="introduzca_el_nombre">Introduzca el nombre</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="mes">Mes</string>
    <string name="anyo">Año</string>
    <string name="dia">Día</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="calcular">Calcular</string>
    <string name="filename">historial.txt</string>
    <string name="fechaIncorrecta">La fecha introducida no es correcta</string>
    <string name="faltanDatos">No se han introducido todos los datos</string>
    <string name="articulo">\"Articulo: \"</string>
    <string name="codigo">\" Código: \"</string>
    <string name="precio">\" Precio: \"</string>
    <string name="ficheroNoExiste">No existe el fichero</string>
    <string name="niño">Niño</string>
    <string name="niña">Niña</string>
    <string name="adolescente">Adolescente</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="jubilado">Jubilado</string>
    <string name="jubilada">Jubilada</string>
    <string name="a_o">Año</string>
    <string name="genero">Género</string>
    <string name="edad">Edad</string>
    <string name="edad_num">Edad Num</string>
    <string name="historial">Historial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="usuarioGuardado">Usuario guardado</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
</resources>